# osdlyrics

./: README  README.md  UPDATE  autogen.sh  check-version.sh  configure.ac  readme.md
daemon/: Makefile.am  config.py.in  errors.py  ini_config.py  lrcdb.py  lyrics.py  lyricsource.py  main.py  player.py
data/: dialogs.glade  osdlyrics.desktop.in
doc/: dbus.rst
lyricsources/: Makefile.am
lyricsources/lrclib/: Makefile.am  lrclib.py  org.osdlyrics.LyricSourcePlugin.lrclib.service.in
lyricsources/netease_tr/: Makefile.am  netease_tr.py  netease_tr.py.bak  org.osdlyrics.LyricSourcePlugin.netease_tr.service.in
lyricsources/subtitles4songs/: Makefile.am  org.osdlyrics.LyricSourcePlugin.subtitles4songs.service.in  subtitles4songs.py
m4/: gettext.m4  iconv.m4  lib-link.m4
po/: POTFILES.in  cs.po  de.po  es.po  fr.po  it.po  ms.po  pt_BR.po  ro.po  ru.po  tr.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
python/: Makefile.am  __init__.py.in  app.py  config.py  consts.py  errors.py  lrc.py  lyricsource.py  metadata.py  pattern.py  player_proxy.py  timer.py  utils.py
src/: ol_about.c  ol_about.h  ol_app.h  ol_app_chooser_widget.c  ol_app_chooser_widget.h  ol_app_info.c  ol_app_info.h  ol_cell_renderer_button.c  ol_cell_renderer_button.h  ol_color.c  ol_color.h  ol_commands.c  ol_commands.h  ol_config_property.h  ol_config_proxy.c  ol_config_proxy.h  ol_config_updater.c  ol_config_updater.h  ol_consts.h  ol_debug.c  ol_debug.h  ol_display_module.c  ol_display_module.h  ol_gui.c  ol_gui.h  ol_gussian_blur.c  ol_gussian_blur.h  ol_image_button.c  ol_image_button.h  ol_intl.h  ol_keybinding_settings.h  ol_keybindings.c  ol_keybindings.h  ol_lrc.c  ol_lrc.h  ol_lyric_candidate_list.c  ol_lyric_candidate_list.h  (+54 more)
(+31 files in other folders)
